@@ -1,3 +1,9 @@
+2017-07-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c,
+	  src/SDCCsymt.c:
+	  Minor code cleanup, gets rid of a few LLVM warnings.
+
 2017-07-03 Philipp Klaus Krause <pkk AT spth.de>
 
 	* sdas/asstm8/stm8pst.c:
